"Nirvana" - automated deployment of webapp to Tomcat and execution of all tests